samples/_failures_safe/1761077148_5a3e3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef0df351.c: In function ‘process_event’:
./samples/SAFE/__tmp_ef0df351.c:176:14: error: ‘STATE’ undeclared (first use in this function)
  176 |         case STATE
      |              ^~~~~
./samples/SAFE/__tmp_ef0df351.c:176:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ef0df351.c:176:9: error: expected ‘:’ or ‘...’ at end of input
  176 |         case STATE
      |         ^~~~
./samples/SAFE/__tmp_ef0df351.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef0df351.c:176:9: error: expected declaration or statement at end of input
